--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -833,7 +833,7 @@
         JSON_URLS.showTask = "{{ path('zectranet_task_show', { 'task_id': 0 }) }}";
         JSON_URLS.saveTaskInfo = "{{ path('zectranet_task_edit_info', { 'task_id': 0 }) }}";
         JSON_URLS.changeStatusTask = "{{ path('zectranet_change_task_status', {'task_id': 0}) }}";
-        JSON_URLS.showSprint = "{{ path('zectranet_show_sprint', { 'office_id': 0, 'sprint_id': 1 }) }}";
+        JSON_URLS.showSprint = "{{ path('zectranet_show_sprint', { 'project_id': 0, 'sprint_id': 1 }) }}";
         JSON_URLS.sprintAddTasks = "{{ path('zectranet_sprint_add_tasks', { 'sprint_id': 0 }) }}";
         JSON_URLS.sprintDetachTask = "{{ path('zectranet_detach_task_from_sprint', { 'task_id': 0 }) }}";
         JSON_URLS.getSprintTasks = "{{ path('zectranet_sprint_get_tasks', { 'sprint_id': 0 }) }}";
