--- a/src/ZectranetBundle/Resources/views/sprintDelete.html.twig
+++ b/src/ZectranetBundle/Resources/views/sprintDelete.html.twig
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <a class="btn btn-danger" href="{{ path('zectranet_sprint_delete', { 'office_id': office.id, 'sprint_id': sprint.id }) }}">Delete</a>
+                    <a class="btn btn-danger" href="{{ path('zectranet_sprint_delete', { 'project_id': project.id, 'sprint_id': sprint.id }) }}">Delete</a>
                     <a class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</a>
                 </div>
             </div>
